--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,13 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-    background-color: rgb(211, 211, 211);
+    background-color: rgb(255, 255, 255);
     text-align: center;
     font-family: sans-serif;
     margin: auto;
+    height: 100%;;
 }
 
 .underline {
@@ -10,28 +15,127 @@ body {
     border-bottom: 2px;
     width: 100%;
     height: 2px;
-
+    padding: 0;
+    margin: 0;
 }
 
-.menu-item {
-    border-bottom: 2px;
-    background-color: gold;
-    width: 100px;
-    height: 2px;
-    display: inline;
+.photo {
+    border: solid gold 1px;
 }
 
-img {
+.photo {
     height: 300px;
 }
 
-article {
-    display: grid;
-    gap: 0.5rem;
-    grid-template-columns: repeat(3, auto);
-    grid-template-rows: repeat(2, auto);
+.section-center {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 5rem;
+    justify-content: center;
+    align-items: center;
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 20px 10px;
 }
 
-.item-text {
-    padding: 0 200px;
+.section-center > .menu-item {
+    max-width: 350px;
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
 }
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+  margin: 5px 2px;
+}
+
+.fa:hover {
+  opacity: 0.3;
+}
+
+.fa-instagram {
+    background: black;
+  color: goldenrod;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+    display: inline-block;
+}
+
+footer > a {
+    margin: 0 15px 0 15px;
+}
+
+footer > a:hover {
+    text-decoration:none;
+    color:black;
+}
+
+
+.footer1 {
+    width: 100%;
+    background-color: transparent;
+}
+
+nav > ul > li {
+    display: inline-block;
+    text-transform: capitalize;
+    text-align: justify;
+    font-size: 20px;
+}
+
+nav > ul > li > a:hover {
+    color:black;
+}
+
+nav > ul > li {
+    margin: 0 15px 0 15px;
+}
+
+#feature {
+    background-image: url("https://andianne.com/wp-content/uploads/2021/04/smoothies-07.jpg");
+    height:1000px;
+    width:auto;
+    background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.feat-text {
+    text-transform: uppercase;
+    text-align: justify;
+    position: relative;
+    top: 50%;
+    color: black;
+    text-shadow: 2px 2px 5px white;
+    margin-left: 10px;
+}
+
+.order-button {
+    color:black;
+    background-color: gold;
+    width: 150px;
+    text-align: center;
+    padding: 5px;
+    border-radius: 5px;
+    margin-left: 10px;
+}
+
+.order-button > a:hover {
+    text-decoration:none;
+    color:black;
+}
+
+.title {
+    margin: 0;
+    padding: 0;
+}
+
